More inspection cleanup
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1489707 13f79535-47bb-0310-9956-ffa450edef68